--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
       border-radius: 999px; /* paper pill */
       box-shadow: 0 4px 14px rgba(11,31,58,0.06);
     }
+    .overline--stone{
+      background: rgba(203,213,225,0.50); /* stone @ 50% */
+      border-color: rgba(11,31,58,0.12);
+      color: rgba(11,31,58,0.70);
+      margin-left: 8px; /* sits to the right of CORE TRACK */
+    }
     .hero-title{
       margin: 0 0 12px 0;
       font-size: calc(clamp(32px, 5vw, 56px) - 4px);
@@ -214,7 +220,6 @@
       font-weight: 700;
       color: var(--teal);
     }
-
     .btn-primary{
       display: inline-block;
       padding: 12px 18px;
@@ -226,18 +231,29 @@
       font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
       font-weight: 700;
       letter-spacing: 0.01em;
-      transition: transform .05s ease, filter .15s ease, opacity .15s ease;
-      will-change: transform;
+
+      /* new ambient shadow */
+      box-shadow: 0 10px 24px rgba(11,31,58,0.18), 0 2px 6px rgba(11,31,58,0.10);
+      transition: transform .08s ease, box-shadow .15s ease;
+      will-change: transform, box-shadow;
     }
-    .btn-primary:hover{ filter: brightness(0.95); }
-    .btn-primary:active{ transform: translateY(1px); opacity: 0.9; }
+
+    .btn-primary:hover{
+      /* slight pressed on hover */
+      transform: translateY(1px);
+      box-shadow: 0 6px 16px rgba(11,31,58,0.16), 0 1px 4px rgba(11,31,58,0.10);
+    }
+
+    .btn-primary:active{
+      /* deeper press while mouse down */
+      transform: translateY(2px);
+      box-shadow: 0 3px 8px rgba(11,31,58,0.18), 0 1px 3px rgba(11,31,58,0.12);
+    }
     .btn-primary:focus-visible{
       outline: 2px solid var(--ink);
       outline-offset: 3px;
       border-radius: 12px;
     }
-    /* Make button label pop slightly */
-    .btn-primary{ text-shadow: 0 1px 0 rgba(11,31,58,0.22); }
     .hero-sub{
       margin: 8px 0 16px 0;
       max-width: 56ch;
@@ -340,7 +356,7 @@
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <div class="overline">Core track</div>
+        <div class="overline">Core track</div><div class="overline overline--stone">Specialist track</div>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
         <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
