routes: split into core.html and specialist.html; index redirects to core

--- a/index.html
+++ b/index.html
@@ -444,3 +444,30 @@
   </script>
 </body>
 </html>
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Philipp Tutoring — Redirecting…</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="0; url=core.html">
+  <link rel="canonical" href="core.html">
+  <meta name="robots" content="noindex,follow">
+  <script>
+    // JS fallback in case the meta refresh is blocked
+    (function(){ try { location.replace('core.html'); } catch(e){ location.href='core.html'; } })();
+  </script>
+  <style>
+    :root{ --paper:#f7f5f2; --ink:#0b1f3a; --mulberry:#c65a72; }
+    html,body{height:100%}
+    body{margin:0;display:grid;place-items:center;background:var(--paper);color:var(--ink);font:16px/1.4 system-ui,sans-serif}
+    .card{padding:16px 18px;border:1px solid rgba(11,31,58,.12);border-radius:12px}
+    a{color:var(--mulberry);font-weight:600;text-decoration:none}
+    a:hover{text-decoration:underline}
+  </style>
+</head>
+<body>
+  <div class="card">Redirecting to <a href="core.html">Core track</a>…</div>
+</body>
+</html>
