--- a/specialist.html
+++ b/specialist.html
@@ -1,12 +1,78 @@
-cd "/Users/MOPOLLIKA/Library/Mobile Documents/com~apple~CloudDocs/tutoring/website"
-# create the two files
-pbpaste > core.html <<'EOF'
-# paste the core.html content above and press Ctrl-D
-EOF
-pbpaste > specialist.html <<'EOF'
-# paste the specialist.html content above and press Ctrl-D
-EOF
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Philipp Tutoring — Specialist Track</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Specialist A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
+  <meta name="theme-color" content="#c65a72">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap"></noscript>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
-git add core.html specialist.html index.html
-git commit -m "routes: split into core.html and specialist.html; index redirects to core"
-git push
+  <!-- GA/LCP identical to core -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYTSZ8BF4Z"></script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-ZYTSZ8BF4Z');</script>
+  <script>(function(){if(!('PerformanceObserver'in window))return;let e;const o=new PerformanceObserver(t=>{const n=t.getEntries();e=n[n.length-1]});try{o.observe({type:'largest-contentful-paint',buffered:!0})}catch(_){ }function r(){if(!e||typeof gtag!=='function')return;const t=Math.round(e.startTime);gtag('event','lcp',{value:t,lcp_seconds:+(t/1000).toFixed(3),element:e.element&&e.element.tagName?e.element.tagName.toLowerCase():void 0,url:e.url||location.pathname,size:e.size||void 0,transport_type:'beacon'})}addEventListener('pagehide',r,{once:!0});addEventListener('visibilitychange',()=>{document.visibilityState==='hidden'&&r()},{once:!0})})();</script>
+
+  <style>
+    /* === copy the entire <style> from core.html unchanged === */
+  </style>
+
+  <!-- copy the same image preload line from core.html -->
+  <link rel="preload" as="image" href="/assets/philipp-1200.avif" type="image/avif"
+        imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
+        imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+</head>
+<body>
+  <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
+    <img src="/favicon.svg" alt="Philipp favicon">
+  </a>
+
+  <section class="hero" role="banner">
+    <div class="hero-inner">
+      <div class="hero-left">
+        <a id="pill-core" class="overline is-inactive" href="core.html" aria-label="Core track">Core track</a>
+        <a id="pill-specialist" class="overline overline--stone is-active" href="specialist.html" aria-label="Specialist track">Specialist track</a>
+
+        <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
+        <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
+        <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
+
+        <div class="cta">
+          <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+          <div class="cta-sub">No charge • 20 min</div>
+        </div>
+      </div>
+
+      <div class="hero-right">
+        <picture>
+          <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
+          <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
+        </picture>
+      </div>
+    </div>
+
+    <a class="scroll-cue" href="#more" aria-label="Scroll for more">
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
+    </a>
+  </section>
+
+  <section id="more" class="below" aria-hidden="true"></section>
+
+  <script>
+    document.addEventListener('click', function(e) {
+      const el = e.target.closest('a,button'); if (!el) return;
+      const href = el.href || ''; const custom = el.dataset && el.dataset.gtagEvent;
+      if (custom) { gtag('event', custom); return; }
+      if (href.startsWith('mailto:')) gtag('event','contact_click',{method:'email'});
+      else if (href.startsWith('tel:')) gtag('event','contact_click',{method:'phone'});
+      else if (href.includes('wa.me') || href.includes('api.whatsapp.com')) gtag('event','contact_click',{method:'whatsapp'});
+      else if (href.includes('calendly.com') || href.includes('cal.com')) gtag('event','book_consult_click',{destination:'calendly'});
+    });
+  </script>
+</body>
+</html>
