mobile: pill row nav + tighter hero top padding

--- a/core.html
+++ b/core.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Philipp Tutoring — Core Track</title>
+  <title>Philipp Tutoring</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Premium A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
   <meta name="theme-color" content="#c65a72">
@@ -39,8 +39,10 @@
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <a id="pill-core" class="overline is-active" href="core.html" aria-label="Core track" aria-current="page" data-gtag-event="switch_track" data-track="core">Core track</a>
-        <a id="pill-specialist" class="overline overline--stone is-inactive" href="specialist.html" aria-label="Specialist track" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
+        <div class="pill-row">
+          <a id="pill-core" class="overline is-active" href="core.html" aria-label="Core track" aria-current="page" data-gtag-event="switch_track" data-track="core">Core track</a>
+          <a id="pill-specialist" class="overline overline--stone is-inactive" href="specialist.html" aria-label="Specialist track" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
+        </div>
 
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
