--- a/specialist.html
+++ b/specialist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Philipp Tutoring — Specialist Track</title>
+  <title>Philipp Tutoring</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Specialist A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
   <meta name="theme-color" content="#c65a72">
