--- a/specialist.html
+++ b/specialist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Philipp Tutoring</title>
+  <title>Philipp Tutoring —— Specialist Track</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Specialist A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
   <meta name="theme-color" content="#c65a72">
@@ -32,8 +32,10 @@
   <section class="hero" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
-        <a id="pill-core" class="overline is-inactive" href="core.html" aria-label="Core track" data-gtag-event="switch_track" data-track="core">Core track</a>
-        <a id="pill-specialist" class="overline overline--stone is-active" href="specialist.html" aria-label="Specialist track" aria-current="page" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
+        <div class="pill-row">
+          <a id="pill-core" class="overline is-inactive" href="core.html" aria-label="Core track" data-gtag-event="switch_track" data-track="core">Core track</a>
+          <a id="pill-specialist" class="overline overline--stone is-active" href="specialist.html" aria-label="Specialist track" aria-current="page" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
+        </div>
 
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
