favicon put back in the front

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       border-radius:12px;
       line-height:0;
       -webkit-tap-highlight-color: transparent;
+      z-index: 10;                 /* keep above hero gradients */
     }
     .brand-mark img{width:32px;height:32px;display:block}
 
