--- a/core.html
+++ b/core.html
@@ -31,7 +31,7 @@
         imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
         imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
-<body>
+<body class="track-core">
   <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
@@ -44,6 +44,7 @@
           <a id="pill-specialist" class="overline overline--stone is-inactive" href="specialist.html" aria-label="Specialist track" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
         </div>
 
+        <p class="track-overline">Accountable tutoring, consistent success.</p>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
         <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
