--- a/specialist.html
+++ b/specialist.html
@@ -24,12 +24,12 @@
         imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
         imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
 </head>
-<body>
+<body class="track-specialist">
   <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
     <img src="/favicon.svg" alt="Philipp favicon">
   </a>
 
-  <section class="hero" role="banner">
+  <section class="hero hero--specialist" role="banner">
     <div class="hero-inner">
       <div class="hero-left">
         <div class="pill-row">
@@ -37,9 +37,10 @@
           <a id="pill-specialist" class="overline overline--stone is-active" href="specialist.html" aria-label="Specialist track" aria-current="page" data-gtag-event="switch_track" data-track="specialist">Specialist track</a>
         </div>
 
-        <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
-        <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
+        <p class="track-overline">Serious tuition for serious results.</p>
+        <h1 class="hero-title">A Level Computer Science<br>and Further Maths,<br>taught for <span class="u-underline">mastery</span>.</h1>
+        <p class="hero-sub">No guesswork: 5 performance indicators guarantee visible results.</p>
+        <div class="trust-hook">4×A* Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
 
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
