--- a/core.html
+++ b/core.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Premium A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
   <meta name="theme-color" content="#c65a72">
+  <!-- dev-only: disable caching while debugging -->
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +29,8 @@
     gtag('config', 'G-ZYTSZ8BF4Z');
   </script>
 
-  <link rel="stylesheet" href="/assets/styles.css">
+  <!-- dev-only: cache-busting query while iterating -->
+  <link rel="stylesheet" href="/assets/styles.css?dev=1">
 
   <link rel="preload" as="image" href="/assets/philipp-1200.avif" type="image/avif"
         imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w"
@@ -71,6 +76,7 @@
 
   <section id="more" class="below" aria-hidden="true"></section>
 
-  <script src="/assets/app.js" defer></script>
+  <!-- dev-only: cache-busting query while iterating -->
+  <script src="/assets/app.js?dev=1" defer></script>
 </body>
 </html>
